fix(FEC-14447): Adjust navigationItem title spacing (#392)
This solves https://kaltura.atlassian.net/browse/FEC-14447. I added
ellipsis for when the expand area is not expanded.

--- a/src/components/navigation/navigation-item/NavigationItem.scss
+++ b/src/components/navigation/navigation-item/NavigationItem.scss
@@ -120,6 +120,15 @@
       font-size: 14px;
       font-style: normal;
       font-weight: 400;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      padding-right: 28px
+    }
+    .expandedTitle {
+      white-space: normal;
+      overflow: visible;
+      text-overflow: unset;
     }
 
     .descriptionWrapper {
